# Project-Japan

./: .env.example  .env.local.example  .gitignore  BUILD_SPEC.md  CLAUDE.md  README.md  SESSION_LOG_2026-05-01.md  SESSION_LOG_2026-05-04.md  SESSION_LOG_2026-05-05.md  SESSION_LOG_2026-05-06.md  SESSION_LOG_2026-05-07.md  SESSION_LOG_2026-05-08-M7.md  SESSION_LOG_2026-05-08.md  SESSION_LOG_2026-05-09-M8.md  SESSION_LOG_2026-05-10-M9.md  SESSION_LOG_2026-05-12-M10-plan.md  SESSION_LOG_2026-05-12-M10.md  SESSION_LOG_2026-05-12-dashboard-strategy.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: CLAUDE.md  DEPLOY.md  instrumentation.ts  next.config.mjs  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts
apps/web/scripts/: build-japan-paths.mjs  vercel-env-sync.sh
apps/web/src/: middleware.ts
apps/web/src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/login/: LoginForm.tsx  page.tsx
apps/web/src/components/: PosthogProvider.tsx
apps/web/src/components/analyst/: AnalystClient.tsx  ChatInterface.tsx  PlotlyArtifact.tsx  ScratchpadPane.tsx
apps/web/src/components/dashboard/: ComputeRunsTable.tsx  CronHealthStrip.tsx  DashboardClient.tsx  ForecastPanel.tsx  IngestStatusTable.tsx  JapanRegionalMap.tsx  RegimePanel.tsx  RegionDetail.tsx  RegionHistoryChart.tsx  StackInspector.tsx  StrategyTab.tsx  types.ts
apps/web/src/components/lab/: BacktestForm.tsx  BacktestResults.tsx  LabClient.tsx
apps/web/src/components/ui/: card.tsx  metric-card.tsx  page-header.tsx  skeleton.tsx  tab-bar.tsx
apps/web/src/components/workbench/: AssetForm.tsx  AssetList.tsx  DecisionHeatmap.tsx  ValuationResults.tsx  WorkbenchClient.tsx
apps/web/src/hooks/: useChatSession.ts  useRealtimeBacktest.ts  useRealtimeForecast.ts  useRealtimeRegionalBalance.ts  useRealtimeValuation.ts
apps/web/src/lib/: bos-strategy.ts  fuel-colors.ts  japan-region-paths.ts  posthog.ts
apps/web/src/lib/supabase/: client.ts  middleware.ts  server.ts
apps/worker/: CLAUDE.md  modal_app.py  pyproject.toml
apps/worker/agent/: CLAUDE.md  SHELVED_2026-05-10.md  __init__.py  loop.py  models.py  prompts.py  safety.py  service.py  tools.py
apps/worker/backtest/: CLAUDE.md  __init__.py  models.py  runner.py  slippage.py  strategies.py  vlstm_paths.py
apps/worker/backtest/tests/: test_vlstm_paths.py
apps/worker/common/: CLAUDE.md  __init__.py  audit.py  db.py  http_auth.py  lock.py  retry.py  sentry.py
apps/worker/common/tests/: test_http_auth.py
apps/worker/demo/: run_daily.py
apps/worker/ingest/: __main__.py  _area_supply.py  _areas.py  demand.py  fuel_prices.py  fx.py  generation_mix.py  generator_availability.py  holidays.py  jepx_intraday.py  jepx_prices.py  models.py  weather.py
apps/worker/lsm/: CLAUDE.md  __init__.py  engine.py  models.py  runner.py  schwartz.py
apps/worker/lsm/tests/: test_boogert_dejong_replication.py  test_runner_forecast_paths.py
apps/worker/regime/: CLAUDE.md  infer_state.py  jw_mrs.py  models.py  mrs_calibrate.py  pot.py  validate.py
apps/worker/seed/: data_dictionary.yaml  load_data_dictionary.py  load_reference.py  models.py
apps/worker/stack/: CLAUDE.md  backtest.py  build_curve.py  generators_seed.yaml  load_generators.py  models.py  srmc.py  synthesize_demand.py  weather_proxy.py
apps/worker/vlstm/: CLAUDE.md  __init__.py  baseline.py  data.py  forecast.py  model.py  models.py  storage.py  train.py  validate.py
supabase/: config.toml
supabase/migrations/: 001_init.sql  002_rls.sql  003_agent_readonly_role.sql  004_jepx_intraday.sql  005_latest_coverage_slot.sql  006_demo_examples.sql  007_region_history.sql  008_harden_region_history_rpc.sql
(+25 files in other folders)
