[project]
name = "jepx-worker"
version = "0.0.0"
description = "JEPX-Storage compute worker — ingest, ML, LSM, AI agent. Runs on Modal (Tokyo)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "modal>=0.64",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    # M2 — DB seed (reference data + data dictionary).
    "psycopg[binary]>=3.2.13",
    "holidays>=0.50",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavier deps land at their respective milestones:
# M3 ingest:    httpx, polars, supabase
# M5 regime:    statsmodels
# M6 vlstm:     torch, lightning, numpy, pandas, pyarrow
# M7 lsm:       numba
# M9 agent:     fastapi, openai, sqlglot, sentry-sdk
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest", "stack", "regime", "vlstm", "lsm", "backtest", "agent", "seed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
