[project]
name = "jepx-worker"
version = "0.0.0"
description = "JEPX-Storage compute worker — ingest, ML, LSM, AI agent. Runs on Modal (Tokyo)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "modal>=0.64",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    # M2 — DB seed (reference data + data dictionary).
    "psycopg[binary]>=3.2.13",
    "holidays>=0.50",
    "pyyaml>=6.0",
    # M3 — Tier 1 ingest (HTTP fetch, retries, parsing, audit).
    "httpx>=0.27",
    "tenacity>=8.4",
    "pandas>=2.2",
    "sentry-sdk>=2.0",
    # M4 — stack engine (numpy used directly in stack/backtest.py for RMSE).
    "numpy>=1.26",
    # M5 — regime model (Markov regime-switching via Hamilton/Kim filter).
    "statsmodels>=0.14",
    # M6 — VLSTM probabilistic forecaster + ARIMA gate baseline.
    # statsmodels (already above) covers the ARIMA baseline. PyTorch +
    # Lightning train + run inference; pyarrow exports training tensors to
    # parquet for efficient Modal-container loading.
    "torch>=2.3,<2.6",
    "pytorch-lightning>=2.1",
    "pyarrow>=14",
    # M7 — LSM storage valuation engine. Numba JIT with parallel=True is
    # mandatory per BUILD_SPEC §8; without it the backward-induction loop
    # is unusably slow. PyPI wheels ship precompiled LLVM — no Debian
    # tooling needed. FastAPI is required for the @modal.fastapi_endpoint
    # `lsm-value` HTTP route in modal_app.py.
    "numba>=0.59",
    "fastapi[standard]>=0.115",
    # M9 — AI Analyst. OpenAI SDK for function-calling, sqlglot for the
    # SELECT-only SQL safety layer, scikit-learn for the fit_quick_model
    # tool, sse-starlette for the SSE response wrapper in the FastAPI
    # ASGI app.
    "openai>=1.50",
    "sqlglot>=23",
    "scikit-learn>=1.5",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
# Heavier deps land at their respective milestones:
# M5 regime:    statsmodels
# M6 vlstm:     torch, lightning, pyarrow  (now in base)
# M7 lsm:       numba                       (now in base)
# M9 agent:     openai, sqlglot, sklearn, sse-starlette  (now in base)
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "types-PyYAML>=6.0",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "ingest", "stack", "regime", "vlstm", "lsm", "backtest", "agent", "seed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
